# OBAnalyser

./: .gitignore  README.md  pyproject.toml
docs/: examples.py
src/obanalyser/: analyse_build.py  analyse_obp.py  compensate_build.py  config.py  data_classes.py  extract_obp_elements.py  get_3mf_data.py  get_build_order.py  heat_model_layerwise.py  heat_model_lumped.py
src/obanalyser/plotters/: plot_build_data.py  plot_csv.py  plot_temp.py
src/obanalyser/regression_model/: thermal_model_layer.pkl  thermal_model_layerfeed.pkl
tests/: test_3mf.py  test_build_compensation.py  test_build_input.py  test_export_csv.py  test_heat_model.py  test_heat_model_layerwise.py
tests/input/cubes_test/: buildInfo.json  buildInfo2.json  manifest.json  newbuildInfo.json
tests/input/cubes_test/geometry/: part1.stl  part2.stl  part3.stl  part4.stl
tests/input/cubes_test/obp/: heat_compensation.obp  layer_melt.obp  new_preheat.obp
tests/input/heat_model_layerwise/: build_info.json  build_info2.json
tests/input/screw_test/: build_info.json  thermal_mass.json
tests/input/test_input1/: buildInfo.json
tests/input/test_input1/obp/: BSE_Scan_PT.obp  PostMelt_IdleScan.obp  layer0.obp  layer1.obp  layer10.obp  layer100.obp  layer101.obp  layer102.obp  layer103.obp  layer104.obp  layer105.obp  layer106.obp  layer107.obp  layer108.obp  layer109.obp  layer11.obp  (+338 more)
tests/input/test_input2/: buildInfo.json  dependencies.json  manifest.json
tests/input/thermal_models/: build_info.json
tests/output/: build_info.json  test_export_csv_time_power.csv  test_export_csv_time_spot_size.csv
(+14 files in other folders)
